portknock/iptables.rules
# Generated by iptables-save v1.4.21 on Tue May 24 23:22:50 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [11:1088]
:GATE1 - [0:0]
:GATE2 - [0:0]
:GATE3 - [0:0]
:KNOCKING - [0:0]
:PASSED - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -j KNOCKING
-A GATE1 -p tcp -m tcp --dport 1111 -m recent --set --name AUTH1 --mask 255.255.255.255 --rsource -j DROP
-A GATE1 -j DROP
-A GATE2 -m recent --remove --name AUTH1 --mask 255.255.255.255 --rsource
-A GATE2 -p tcp -m tcp --dport 2222 -m recent --set --name AUTH2 --mask 255.255.255.255 --rsource -j DROP
-A GATE2 -j GATE1
-A GATE3 -m recent --remove --name AUTH2 --mask 255.255.255.255 --rsource
-A GATE3 -p tcp -m tcp --dport 3333 -m recent --set --name AUTH3 --mask 255.255.255.255 --rsource -j DROP
-A GATE3 -j GATE1
-A KNOCKING -m recent --rcheck --seconds 30 --name AUTH3 --mask 255.255.255.255 --rsource -j PASSED
-A KNOCKING -m recent --rcheck --seconds 10 --name AUTH2 --mask 255.255.255.255 --rsource -j GATE3
-A KNOCKING -m recent --rcheck --seconds 10 --name AUTH1 --mask 255.255.255.255 --rsource -j GATE2
-A KNOCKING -j GATE1
-A PASSED -m recent --remove --name AUTH3 --mask 255.255.255.255 --rsource
-A PASSED -p tcp -m tcp --dport 22 -j ACCEPT
-A PASSED -j GATE1
COMMIT
# Completed on Tue May 24 23:22:50 2016
